add a picture of me

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <hr>
     <div>
       <h3>Sobre mi</h3>
+      <div>
+        <img width="30%" src="imagenes/aridaiperez.jpg" alt="Fotografia de Aridai">
+      </div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil illo
         corrupti dolorum iste, porro laboriosam voluptatibus obcaecati tempora
