--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
     <title>Aridai Perez | Desarrolladora Full Stack Java jr</title>
   </head>
   <body>
-    <h1>Yithzabi Aridai F. Perez</h1>
-    <h2>Portafolio</h2>
-    <hr>
+    <div>
+      <h1>Yithzabi Aridai F. Perez</h1>
+      <h2>Portafolio</h2>
+    </div>
+    <hr />
+    <!-- Sobre mi -->
     <div>
       <h3>Sobre mi</h3>
+      <div>
+        <img
+          width="30%"
+          src="imagenes/aridaiperez.jpg"
+          alt="Fotografia de Aridai"
+        />
+      </div>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil illo
         corrupti dolorum iste, porro laboriosam voluptatibus obcaecati tempora
@@ -18,24 +28,63 @@
         aspernatur culpa possimus?
       </p>
     </div>
-    <hr>
+    <hr />
     <div>
       <h3>Proyectos</h3>
-        <ol>
-            <li>Proyecto 1</li>
-            <li>Proyecto 2</li>
-            <li>Proyecto 3</li>
-        </ol>
+      <ul>
+        <a href="https://github.com/Aridai-Perez/proyecto_sistema_biblioteca"><li>Sistema de gestion de biblioteca</li></a>
+        <div>
+          <img
+            width="300px"
+            src="imagenes/biblioteca.png"
+            alt="imagen de biblioteca virtual"
+          />
+        </div>
+        <p>
+          Un sistema que gestiona el manejo de libros de forma virtual desde la
+          consola y con informacion descartable al momento de cerrar consola.
+        </p>
+        <li><a href="https://aridai-perez.github.io/GoogleClon/">Clon de Google</a></li>
+        <div>
+          <img
+            width="300px"
+            src="imagenes/google.png"
+            alt=" imagen de buscador de google"
+          />
+        </div>
+        <p>
+          Un buscador de google funcional que muestra los resultados de busqueda
+          al momento. Sin responsive.
+        </p>
+        <li><a href="https://aridai-perez.github.io/proyectoTarea/">Pagina de postres y recetas</a></li>
+          <div>
+            <img
+              width="300px"
+              src="imagenes/postres.png"
+              alt=" imagen de pagina de postres"
+            />
+          </div>
+          <p>Pagina de mostres y recetas estatica, responsive</p>
+      </ul>
     </div>
-    <hr>
+    <hr />
+    <!-- Contacto -->
     <div>
       <h3>Contacto</h3>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/yithzabi-aridai-f-perez/">LinkedIn</a></li>
+      <ol>
+        <li>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/yithzabi-aridai-f-perez/"
+            >LinkedIn</a
+          >
+        </li>
         <li>Correo: aridaiperez03@gmail.com</li>
-        <li><a href="https://github.com/Aridai-Perez">Github</a></li>
+        <li>
+          <a target="_blank" href="https://github.com/Aridai-Perez">Github</a>
+        </li>
         <li>Celular: 664 751 4818</li>
-      </ul>
+      </ol>
     </div>
   </body>
 </html>
