--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div>
       <h3>Proyectos</h3>
       <ul>
-        <a href="https://github.com/Aridai-Perez/proyecto_sistema_biblioteca"><li>Sistema de gestion de biblioteca</li></a>
+        <a target="_blank" href="https://github.com/Aridai-Perez/proyecto_sistema_biblioteca"><li>Sistema de gestion de biblioteca</li></a>
         <div>
           <img
             width="300px"
@@ -44,7 +44,7 @@
           Un sistema que gestiona el manejo de libros de forma virtual desde la
           consola y con informacion descartable al momento de cerrar consola.
         </p>
-        <li><a href="https://aridai-perez.github.io/GoogleClon/">Clon de Google</a></li>
+        <li><a target="_blank" href="https://aridai-perez.github.io/GoogleClon/">Clon de Google</a></li>
         <div>
           <img
             width="300px"
@@ -56,7 +56,7 @@
           Un buscador de google funcional que muestra los resultados de busqueda
           al momento. Sin responsive.
         </p>
-        <li><a href="https://aridai-perez.github.io/proyectoTarea/">Pagina de postres y recetas</a></li>
+        <li><a target="_blank" href="https://aridai-perez.github.io/proyectoTarea/">Pagina de postres y recetas</a></li>
           <div>
             <img
               width="300px"
