little change in line 73

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </ul>
     </div>
     <hr />
-    <!-- Contacto -->
+    <!-- Informacion de Contacto -->
     <div>
       <h3>Contacto</h3>
       <ol>
