--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
       </ul>
     </div>
     <hr />
-    <!-- Informacion de Contacto -->
+    <!-- Contacto -->
     <div>
+      <div>Hola ejemplo git</div>
       <h3>Contacto</h3>
       <ol>
         <li>
