--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Aridai Perez | Desarrolladora Full Stack Java jr</title>
   </head>
   <body>
@@ -15,7 +16,8 @@
     <div>
       <h3>Sobre mi</h3>
       <div>
-        <img
+        <img 
+          class="img-perfil"
           width="30%"
           src="imagenes/aridaiperez.jpg"
           alt="Fotografia de Aridai"
@@ -70,6 +72,7 @@
     <hr />
     <!-- Contacto -->
     <div>
+      <div>Hola ejemplo git</div>
       <h3>Contacto</h3>
       <ol>
         <li>
