Titulo de especialidad en encabezado

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div>
       <h1>Yithzabi Aridai F. Perez</h1>
       <h2>Portafolio</h2>
+      <h2>Fullstack developer & web developer</h2>
     </div>
     <hr />
     <!-- Sobre mi -->
@@ -72,7 +73,6 @@
     <hr />
     <!-- Contacto -->
     <div>
-      <div>Hola ejemplo git</div>
       <h3>Contacto</h3>
       <ol>
         <li>
