new about me section

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
         />
       </div>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil illo
-        corrupti dolorum iste, porro laboriosam voluptatibus obcaecati tempora
-        voluptatem, ea assumenda fugiat provident rerum qui dolore eius
-        aspernatur culpa possimus?
+        Apasionada por la tecnologia, los animales y el trabajo social.
       </p>
     </div>
     <hr />
