agregue estilos nuevos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Aridai Perez | Desarrolladora Full Stack Java jr</title>
   </head>
   <body>
+  <!-- Header -->
+  <header>
+      <nav>
+        <div>
+          <img src="imagenes/flor.png" alt="logo de pagina">
+        </div>
+        <div>
+          <ul>
+            <li><a href="#sobremi">Sobre mi</a></li>
+            <li><a href="#proyectos">Proyectos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="">CV</a></li>
+          </ul>
+        </div>
+      </nav>
+  </header>
+  <!-- Main -->
+  <main>
     <div>
       <h1>Yithzabi Aridai F. Perez</h1>
       <h2>Portafolio</h2>
@@ -25,10 +43,11 @@
         />
       </div>
       <p>
-        Apasionada por la tecnologia, los animales y el trabajo social.
+        Apasionada por la tecnologia, los animales y la psicologia.
       </p>
     </div>
-    <hr />
+    <hr/>
+    <!-- Proyectos -->
     <div>
       <h3>Proyectos</h3>
       <ul>
@@ -67,7 +86,10 @@
           <p>Pagina de mostres y recetas estatica, responsive</p>
       </ul>
     </div>
-    <hr />
+    <hr />      
+  </main>
+  <!-- Footer -->
+  <footer>
     <!-- Contacto -->
     <div>
       <h3>Contacto</h3>
@@ -86,5 +108,7 @@
         <li>Celular: 664 751 4818</li>
       </ol>
     </div>
+  </footer>
+
   </body>
 </html>
