--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
     <title>Aridai Perez | Desarrolladora Full Stack Java jr</title>
   </head>
   <body>
@@ -25,15 +28,11 @@
   </header>
   <!-- Main -->
   <main>
-    <div>
-      <h1>Yithzabi Aridai F. Perez</h1>
-      <h2>Portafolio</h2>
-      <h2>Fullstack developer & web developer</h2>
-    </div>
-    <hr />
-    <!-- Sobre mi -->
-    <div>
-      <h3>Sobre mi</h3>
+    <div class="main-encabezado">
+      <div>
+        <h1>Yithzabi Aridai F. Perez</h1>
+        <h2>Fullstack developer & web developer</h2>
+      </div>
       <div>
         <img 
           class="img-perfil"
@@ -42,11 +41,16 @@
           alt="Fotografia de Aridai"
         />
       </div>
+      </div>
+    </div>
+    <!-- Sobre mi -->
+    <div>
+      <h3>Sobre mi</h3>
+      <div>
       <p>
         Apasionada por la tecnologia, los animales y la psicologia.
       </p>
     </div>
-    <hr/>
     <!-- Proyectos -->
     <div>
       <h3>Proyectos</h3>
