actualizacion del area sobre me

--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
       </div>
     </div>
     <!-- Sobre mi -->
-    <div>
-      <h3>Sobre mi</h3>
+    <div class="aboutMe-area">
+      <div>
+        <h3>Sobre mi</h3>
+      </div>
       <div>
       <p>
         Apasionada por la tecnologia, los animales y la psicologia.
       </p>
+      </div>
     </div>
     <!-- Proyectos -->
     <div>
