nuevo formulario para enviar mensajes

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
       </p>
       </div>
     </div>
+    <!-- Skills -->
+    <div class="div-skills">
+      <h3>Habilidades y experiencia</h3>
+    </div>
     <!-- Proyectos -->
-    <div>
+    <div class="div-projects">
       <h3>Proyectos</h3>
       <ul>
         <a class="enlaces" target="_blank" href="https://github.com/Aridai-Perez/proyecto_sistema_biblioteca"><li>Sistema de gestion de biblioteca</li></a>
@@ -92,11 +96,28 @@
           </div>
           <p>Pagina de mostres y recetas estatica, responsive</p>
       </ul>
-    </div>
-    <hr />      
+    </div>     
   </main>
   <!-- Footer -->
-  <footer>
+  <footer class="div-footer">
+    <!-- write a email -->
+    <div>
+      <form action="">
+        <h3>Dejame un mensaje</h3>
+        <label for="">Nombre:</label>
+        <input type="text" placeholder="Juan Lopez"/>
+        <br>
+        <label for="">Correo electronico:</label>
+        <input type="email" placeholder="Email contact">
+        <br>
+        <label for="">Phone number</label>
+        <input type="text" placeholder="Phone number" maxlength="10">
+        <br>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje"></textarea>
+        <br>
+        <button>Enviar</button>
+      </form>
+    </div>
     <!-- Contacto -->
     <div>
       <h3>Contacto</h3>
@@ -105,8 +126,7 @@
           <a class="enlaces"
             target="_blank"
             href="https://www.linkedin.com/in/yithzabi-aridai-f-perez/"
-            >LinkedIn</a
-          >
+            >LinkedIn</a>
         </li>
         <li>Correo: aridaiperez03@gmail.com</li>
         <li>
