estilos al area de formulario

--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
   <!-- Footer -->
   <footer class="div-footer">
     <!-- write a email -->
-    <div>
+    <div class="formulario">
       <form action="">
         <h3>Dejame un mensaje</h3>
-        <label for="">Nombre:</label>
-        <input type="text" placeholder="Juan Lopez"/>
+        <label for="nombre-usuario">Nombre:</label>
+        <input type="text" placeholder="Juan Lopez" id="nombre-usuario"/>
         <br>
-        <label for="">Correo electronico:</label>
-        <input type="email" placeholder="Email contact">
+        <label for="correo-usuario">Correo electronico:</label>
+        <input type="email" placeholder="Email contact" id="correo-usuario">
         <br>
-        <label for="">Phone number</label>
-        <input type="text" placeholder="Phone number" maxlength="10">
+        <label for="celular-usuario">Celular:</label>
+        <input type="text" placeholder="Phone number" maxlength="10" id="celular-usuario">
         <br>
         <textarea name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje"></textarea>
         <br>
