--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Aridai Perez | Desarrolladora Full Stack Java jr</title>
   </head>
   <body>
@@ -46,58 +44,105 @@
     <!-- Sobre mi -->
     <div class="aboutMe-area">
       <div>
-        <h3>Sobre mi</h3>
+        <p>
+          Apasionada por la tecnologia, los animales y la psicologia.
+        </p>
+        <p>
+          Soy una desarrolladora Fullstack Java Jr y Desarrolladora Web. Me fascina la sensación de 
+          poder crear páginas desde cero, algo que nunca imaginé que haría y que ahora se ha convertido 
+          en mi nueva pasión. La programación me brinda la oportunidad de crear cosas nuevas y llevar 
+          las ideas de las personas a la web, añadiéndoles una interfaz amigable e intuitiva, además de 
+          aportarles una pizca de mi ingenio e imaginación.
+        </p>
       </div>
       <div>
-      <p>
-        Apasionada por la tecnologia, los animales y la psicologia.
-      </p>
+        <h3>Sobre mi</h3>
       </div>
     </div>
     <!-- Skills -->
-    <div class="div-skills">
-      <h3>Habilidades y experiencia</h3>
+    <div class="div-skills container-fluid">
+      <div class="row">
+        <div class="skills">
+          <div class="titleSkill"><h3>Hard Skills</h3></div>
+          <div class="skillsList">
+            <p class="ojitas">HTML5</p>
+            <p class="ojitas">JavaScript</p>
+            <p class="ojitas">CSS</p>
+            <p class="ojitas">SQL</p>
+            <p class="ojitas">Java</p>
+            <p class="ojitas">Bootstrap</p>
+            <p class="ojitas">Git y Github</p>
+            <p class="ojitas">Figma</p>
+            <p class="ojitas">Metodologia SCRUM</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="skills">
+          <div class="titleSkill"><h3>Soft Skills</h3></div>
+          <div class="skillsList">
+            <p class="ojitas">Trabajo en Equipo</p>
+            <p class="ojitas">Liderazgo</p>
+            <p class="ojitas">Iniciativa</p>
+            <p class="ojitas">Proactiva</p>
+            <p class="ojitas">Resolucion de conflictos</p>
+            <p class="ojitas">Entusiasmo</p>
+            <p class="ojitas">Creatividad</p>
+            <p class="ojitas">Adaptabilidad</p>
+          </div>
+        </div>
+      </div>
     </div>
+
     <!-- Proyectos -->
     <div class="div-projects">
-      <h3>Proyectos</h3>
-      <ul>
-        <a class="enlaces" target="_blank" href="https://github.com/Aridai-Perez/proyecto_sistema_biblioteca"><li>Sistema de gestion de biblioteca</li></a>
-        <div>
-          <img
-            width="300px"
-            src="imagenes/biblioteca.png"
-            alt="imagen de biblioteca virtual"
-          />
-        </div>
-        <p>
-          Un sistema que gestiona el manejo de libros de forma virtual desde la
-          consola y con informacion descartable al momento de cerrar consola.
-        </p>
-        <li><a class="enlaces" target="_blank" href="https://aridai-perez.github.io/GoogleClon/">Clon de Google</a></li>
-        <div>
-          <img
-            width="300px"
-            src="imagenes/google.png"
-            alt=" imagen de buscador de google"
-          />
-        </div>
-        <p>
-          Un buscador de google funcional que muestra los resultados de busqueda
-          al momento. Sin responsive.
-        </p>
-        <li><a class="enlaces" target="_blank" href="https://aridai-perez.github.io/proyectoTarea/">Pagina de postres y recetas</a></li>
-          <div>
-            <img
-              width="300px"
-              src="imagenes/postres.png"
-              alt=" imagen de pagina de postres"
-            />
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-4">
+            <p>Alo Bomnito</p>
+            <img src="./imagenes/google.png" alt="" id="proyecto1">
           </div>
-          <p>Pagina de mostres y recetas estatica, responsive</p>
-      </ul>
-    </div>     
+          <div class="col-4">
+            <p>Alo Bomnito</p>
+            <img src="./imagenes/google.png" alt="" id="proyecto2">
+          </div>
+          <div class="col-4">
+            <p>Alo Bomnito</p>
+            <img src="./imagenes/google.png" alt="" id="proyecto3">
+          </div>
+        </div>
+        <dialog id="dialog">
+          <div>
+            <div><i class="bi bi-x-lg closedBtn" id="closed"></i></div>
+            <div class="title_dialog">Proyecto</div>
+            <div class="imagenes_dialog">
+            </div>
+            <div>
+              <p>Descripcion:</p>
+              <p class="descripcion_dialog">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Ipsam asperiores quos, dicta voluptates deserunt, cupiditate 
+                ratione molestias, possimus omnis consectetur itaque. Natus non 
+                quos hic quidem ipsum a ipsa maxime.</p>
+            </div>
+            <div>
+              <p>Herramientas usadas:</p>
+              <ul class="herramientas_dialog">
+                <li>herramientas</li>
+              </ul>
+            </div>
+          </div>
+        </dialog>
+        <!-- <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+        </div> -->
+      </div>
+      <div class="title-projects"><h3>Proyectos</h3></div>
+    </div>  
+    
   </main>
+  
   <!-- Footer -->
   <footer class="div-footer">
     <!-- write a email -->
@@ -137,5 +182,6 @@
     </div>
   </footer>
 
+  <script src="script.js"></script>
   </body>
 </html>
